--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -33,6 +33,7 @@ defaultImages:
   # default images for CPU and GPU environments
   cpuImage: "determinedai/pytorch-ngc-dev:0736b6d"
   gpuImage: "determinedai/pytorch-ngc-dev:0736b6d"
+  rocmImage: "determinedai/environments:rocm-5.6-pytorch-1.3-tf-2.10-rocm-mpich-0736b6d"
 
 # Install Determined enterprise edition.
 enterpriseEdition: false
