Begin to add dry-run functionality to CircleCI
* Update individual components (master, agent, helm, harness, and
  model_hub) to support dry-run release functionality. It's a bit
  ham-fisted, but I've added additional *-dryrun makefile targets that
  attempt to do whatever the production variant does, in a way that
  doesn't affect production resources. This is most important for things
  like pushing Python packages and Docker images.

* Update CircleCI to support the various dryrun make targets, including
  some quality-of-life changes to support some better modularity.

* Add additional .goreleaser_dryrun.yml files for make targets that use
  goreleaser, as this configuration controls things like publication to
  GitHub Releases, which we definitely want to avoid for a test release.

* Caveat: the way this has all been implemented makes it quite easy for
  the dry-run release functionality to get out-of-sync with the
  production functionality. We'll want to investigate a better way to
  factor out common parts of these configs to avoid duplication that
  could cause bugs later on.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1454,12 +1454,21 @@ commands:
             - run: make -C agent check
 
   make-package:
+    parameters:
+      dryrun:
+        type: boolean
+        default: false
     steps:
       - attach_workspace:
           at: .
       - run:
           no_output_timeout: 30m
-          command: make package
+          command: |
+            if <<parameters.dryrun>>; then
+              make package-dryrun
+            else
+              make package
+            fi
 
   make-package-ee:
     steps:
@@ -1490,6 +1499,32 @@ commands:
       - run:
           command: devcluster --oneshot -c .circleci/devcluster/<<parameters.devcluster-config>> --target-stage <<parameters.target-stage>> || circleci-agent step halt
           background: true
+
+  make-component:
+    description: "Basic parameterized version of make for building Determined components."
+    parameters:
+      component:
+        type: string
+        default: ""
+      target:
+        type: string
+        default: ""
+      dryrun:
+        type: boolean
+        default: false
+      no_output_timeout:
+        type: string
+        default: "10m"
+    steps:
+      - run:
+          no_output_timeout: <<parameters.no_output_timeout>>
+          command: |
+            set -vx
+            if <<parameters.dryrun>>; then
+              make -C <<parameters.component>> <<parameters.target>>
+            else
+              make -C <<parameters.component>> <<parameters.target>>-dryrun
+            fi
 
 jobs:
   build-helm:
@@ -1582,7 +1617,7 @@ jobs:
       ee:
         type: boolean
         default: false
-      dry-run:
+      dryrun:
         type: boolean
         default: false
     docker:
@@ -1594,7 +1629,7 @@ jobs:
       - run: apk add make curl py3-pip
       - run: pip install --break-system-packages awscli  # used in the terraform apply
       - run: |
-          if <<parameters.dry-run>>; then
+          if <<parameters.dryrun>>; then
             echo 'Doing a dry run!'
             if <<parameters.ee>>; then
               export DET_VARIANT=EE
@@ -1804,6 +1839,10 @@ jobs:
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
 
   package-and-push-system-rc:
+    parameters:
+      dryrun:
+        type: boolean
+        default: false
     docker:
       - image: <<pipeline.parameters.docker-image>>
         environment:
@@ -1824,11 +1863,29 @@ jobs:
           username: ${NGC_API_USERNAME}
           password: ${NGC_API_KEY}
       - pre-package-and-push-system
-      - make-package
-      - run: make -C master publish
-      - run: make -C agent publish
-      - run: make -C model_hub build-docker
-      - run: tools/scripts/retry.sh make -C model_hub publish-docker
+      # - make-package
+      - make-package:
+          dryrun: <<parameters.dryrun>>
+      # - run: make -C master publish
+      - make-component:
+          component: master
+          target: publish
+          dryrun: <<parameters.dryrun>>
+      # - run: make -C agent publish
+      - make-component:
+          component: agent
+          target: publish
+          dryrun: <<parameters.dryrun>>
+      # - run: make -C model_hub build-docker
+      - make-component:
+          component: model_hub
+          target: build-docker
+          dryrun: <<parameters.dryrun>>
+      #- run: tools/scripts/retry.sh make -C model_hub publish-docker
+      - make-component:
+          component: model_hub
+          target: publish-docker
+          dryrun: <<parameters.dryrun>>
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
       - store_artifacts:
           path: /tmp/pkgs
@@ -1857,6 +1914,10 @@ jobs:
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
 
   package-and-push-system-release:
+    parameters:
+      dryrun:
+        type: boolean
+        default: false
     docker:
       - image: <<pipeline.parameters.docker-image>>
         environment:
@@ -1877,14 +1938,22 @@ jobs:
           username: ${NGC_API_USERNAME}
           password: ${NGC_API_KEY}
       - pre-package-and-push-system
-      - run:
-          no_output_timeout: 30m
-          command: make -C master release
-      - run:
-          no_output_timeout: 30m
-          command: make -C agent release
-      - run: make -C model_hub build-docker
-      - run: make -C model_hub publish-docker
+      - make-component:
+          component: master
+          target: release
+          no_output_timeout: "30m"
+      - make-component:
+          component: agent
+          target: release
+          no_output_timeout: "30m"
+      - make-component:
+          component: model_hub
+          target: build-docker
+          dryrun: <<parameters.dryrun>>
+      - make-component:
+          component: model_hub
+          target: publish-docker
+          dryrun: <<parameters.dryrun>>
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
       - store_artifacts:
           path: /tmp/pkgs
@@ -1929,7 +1998,6 @@ jobs:
       - attach_workspace:
           at: .
       - reinstall-go
-      - run: make -C helm release-gh
       - run: |
           if <<parameters.ee>>; then
             make -C helm release-gh-ee
@@ -1944,6 +2012,9 @@ jobs:
       ee:
         type: boolean
         default: false
+      dryrun:
+        type: boolean
+        default: false
     docker:
       - image: <<pipeline.parameters.docker-image>>
     steps:
@@ -1953,11 +2024,21 @@ jobs:
           extras-requires: "build twine"
           executor: <<pipeline.parameters.docker-image>>
       - run: make -C <<parameters.path>> build
+        # The following run step is right about at the point where it should be
+        # split off into its own shell script.
       - run: |
           if <<parameters.ee>>; then
-            make -C <<parameters.path>> publish-ee
+            if <<parameters.dryrun>>; then
+              make -C <<parameters.path>> publish-ee-dryrun
+            else
+              make -C <<parameters.path>> publish-ee
+            fi
           else
-            make -C <<parameters.path>> publish
+            if <<parameters.dryrun>>; then
+              make -C <<parameters.path>> publish-dryrun
+            else
+              make -C <<parameters.path>> publish
+            fi
           fi
 
   check-ts-bindings:
@@ -5621,6 +5702,81 @@ workflows:
             - github-read
             - dev-ci-cluster-default-user-credentials
 
+  release-dryrun:
+    jobs:
+      - build-helm:
+          filters: *release-and-rc-filters
+      - build-proto:
+          filters: *release-and-rc-filters
+      - build-react:
+          context: determined-production
+          filters: *release-and-rc-filters
+      - build-docs:
+          context: determined-production
+          filters: *release-and-rc-filters
+          requires:
+            - build-helm
+            - build-proto
+      - upload-docs-search-index:
+          requires:
+            - build-docs
+          context: determined-production
+          filters: *release-and-rc-filters
+      - package-and-push-system-rc:
+          dryrun: true
+          requires:
+            - build-recat
+            - build-docs
+          context: determined-production
+          filters: *rc-filters
+      - publish-python-package:
+          name: publish-python-package-rc
+          matrix:
+            parameters:
+              path: ["harness", "model_hub"]
+              dryrun: true
+          context: determined-production
+          filters: *rc-filters
+          requires:
+            - package-and-push-system-rc
+
+      - package-and-push-system-release:
+          dryrun: true
+          requires:
+            - build-react
+            - build-docs
+          context: determined-production
+          filters: *release-filters
+
+      - publish-python-package:
+          name: publish-python-package-release
+          matrix:
+            parameters:
+              path: ["harness", "model_hub"]
+              dryrun: true
+          context: determined-production
+          filters: *release-filters
+          requires:
+            - package-and-push-system-release
+
+      - publish-docs:
+          dryrun: true
+          name: publish-docs-rc
+          matrix:
+            parameters:
+              dryrun: [true]
+          requires:
+            - build-docs
+          context: determined-production
+          filters: *rc-filters
+
+      - publish-docs:
+          dryrun: true
+          requires:
+            - build-docs
+          context: determined-production
+          filters: *release-filters
+
   release:
     jobs:
       - build-helm:
@@ -5681,7 +5837,7 @@ workflows:
           name: publish-docs-rc
           matrix:
             parameters:
-              dry-run: [true]
+              dryrun: [true]
           requires:
             - build-docs
           context: determined-production
