--- a/harness/Makefile
+++ b/harness/Makefile
@@ -17,6 +17,12 @@ publish:
 publish-ee:
 	twine upload --verbose --non-interactive dist/* --repository-url https://push.fury.io/determined-ai
 
+.PHONY: publish-dryrun
+publish-dryrun:
+	twine upload --verbose --non-interactive --repository testpypi dist/*
+
+publish-ee-dryrun: ;
+
 .PHONY: fmt
 fmt:
 	isort .
