--- a/master/Makefile
+++ b/master/Makefile
@@ -11,15 +11,19 @@ GORELEASER = goreleaser
 export VERSION := $(shell ../version.sh)
 
 export GO111MODULE := on
+
+# The Docker Hub organization.
 export DOCKER_REPO ?= determinedai
 
 FULL_COMMIT = $(shell git rev-parse HEAD)
 SHORT_COMMIT = $(shell git rev-parse HEAD | head -c9)
 PROJECT_NAME = determined-master
+PROJECT_NAME_DRYRUN = determined-master-dryrun
 EE_PROJECT_NAME = hpe-mlde-master
 ARCHS = amd64 arm64
 ARCH_SMALL = amd64-shared-cluster
 MULTI_ARCH_IMAGES = $(shell for arch in $(ARCHS); do echo $(DOCKER_REPO)/$(PROJECT_NAME):$(FULL_COMMIT)-$$arch; done)
+MULTI_ARCH_IMAGES_DRYRUN = $(shell for arch in $(ARCHS); do echo $(DOCKER_REPO)/$(PROJECT_NAME_DRYRUN):$(FULL_COMMIT)-$$arch; done)
 EE_MULTI_ARCH_IMAGES = $(shell for arch in $(ARCHS); do echo $(DOCKER_REPO)/$(EE_PROJECT_NAME):$(FULL_COMMIT)-$$arch; done)
 SHARED_CLUSTER_IMAGE=$(shell echo $(DOCKER_REPO)/$(PROJECT_NAME):$(FULL_COMMIT)-$(ARCH_SMALL))
 
@@ -29,6 +33,11 @@ PUB_MANIFESTS = \
 	$(DOCKER_REPO)/$(PROJECT_NAME):$(FULL_COMMIT) \
 	$(DOCKER_REPO)/$(PROJECT_NAME):$(SHORT_COMMIT) \
 	$(DOCKER_REPO)/$(PROJECT_NAME):$(VERSION)
+
+PUB_MANIFESTS_DRYRUN = \
+	$(DOCKER_REPO)/$(PROJECT_NAME_DRYRUN):$(FULL_COMMIT) \
+	$(DOCKER_REPO)/$(PROJECT_NAME_DRYRUN):$(SHORT_COMMIT) \
+	$(DOCKER_REPO)/$(PROJECT_NAME_DRYRUN):$(VERSION)
 
 EE_PUB_MANIFESTS = \
 	$(DOCKER_REPO)/$(EE_PROJECT_NAME):$(FULL_COMMIT) \
@@ -230,7 +239,14 @@ package: export DET_SEGMENT_MASTER_KEY ?=
 package: export DET_SEGMENT_WEBUI_KEY ?=
 package: export GORELEASER_CURRENT_TAG := $(VERSION)
 package: gen buildx
-	$(GORELEASER) --snapshot --rm-dist 
+	$(GORELEASER) --snapshot --rm-dist
+
+.PHONY: package-dryrun
+package-dryrun: export DET_SEGMENT_MASTER_KEY ?=
+package-dryrun: export DET_SEGMENT_WEBUI_KEY ?=
+package-dryrun: export GORELEASER_CURRENT_TAG := $(VERSION)
+package-dryrun: gen buildx
+	$(GORELEASER) --snapshot --rm-dist ./.goreleaser_dryrun.yml
 
 .PHONY: package-ee
 package-ee: export DET_SEGMENT_MASTER_KEY ?=
@@ -256,6 +272,15 @@ release: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate |
 release: gen buildx
 	$(GORELEASER) --rm-dist
 	make publish-nvcr
+
+.PHONY: release-dryrun
+release-dryrun: export DET_SEGMENT_MASTER_KEY ?=
+release-dryrun: export DET_SEGMENT_WEBUI_KEY ?=
+release-dryrun: export GORELEASER_CURRENT_TAG := $(VERSION)
+release-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+$$' | grep "$(VERSION)" -A1 | sed -n '2 p')
+# We intentionally do not invoke `make publish-nvcr(-dryrun)` here.
+release-dryrun: gen buildx
+	$(GORELEASER) --rm-dist -f ./.goreleaser_dryrun.yml
 
 .PHONY: release-ee
 release-ee: export DET_SEGMENT_MASTER_KEY ?=
@@ -293,6 +318,12 @@ publish-dev-small:
 .PHONY: publish
 publish:
 	@$(call manifest_publish, $(PUB_MANIFESTS), $(MULTI_ARCH_IMAGES))
+
+.PHONY: publish-dryrun
+# Build and upload production images to the determinedai/determined-dryrun
+# repository.
+publish-dryrun:
+	@$(call manifest_publish, $(PUB_MANIFESTS_DRYRUN), $(MULTI_ARCH_IMAGES_DRYRUN))
 
 .PHONY: publish-ee
 publish-ee:
