--- a/helm/Makefile
+++ b/helm/Makefile
@@ -25,6 +25,14 @@ release-gh:
 	git clean -df
 	goreleaser --rm-dist
 
+.PHONY: release-gh-dryrun
+release-gh-dryrun: export GORELEASER_CURRENT_TAG := $(VERSION)
+release-gh-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+$$' | grep "$(VERSION)" -A1 | sed -n '2 p')
+release-gh-dryrun:
+	go install github.com/goreleaser/goreleaser@v1.14.1
+	git clean -df
+	goreleaser --rm-dist
+
 .PHONY: release-gh-ee
 release-gh-ee: export GORELEASER_CURRENT_TAG := $(VERSION)-ee
 release-gh-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+-ee$$' | grep "$(VERSION)-ee" -A1 | sed -n '2 p')
