* Make dryrun paramter a singleton list in publish-python-package   invocation.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -5742,7 +5742,7 @@ workflows:
           matrix:
             parameters:
               path: ["harness", "model_hub"]
-              dryrun: true
+              dryrun: [true]
           context: determined-production
           filters: *rc-filters
           requires:
