--- a/master/.goreleaser_dryrun.yml
+++ b/master/.goreleaser_dryrun.yml
@@ -9,6 +9,8 @@ snapshot:
 
 builds:
   - main: ./cmd/determined-master
+    id: determined-master
+    binary: determined-master
     ldflags:
       - -X github.com/determined-ai/determined/master/version.Version={{.Env.VERSION}}
       - -X github.com/determined-ai/determined/master/internal/config.DefaultSegmentMasterKey={{.Env.DET_SEGMENT_MASTER_KEY}}
