* Update agent/.goreleaser_dryrun.yml to add builds.id and builds.binary   key so the existing Dockerfile works properly when it attempts to copy   the built binaries.
* Update agent/.goreleaser_dryrun.yml and master/.goreleaser_dryrun.yml
  to use a name_template for built package archives. Otherwise, the
  default uses the project name, which produces incorrectly-named
  packages. It's mostly an aesthetic thing, but we should keep our
  naming consistent and avoid sloppiness.

--- a/agent/.goreleaser_dryrun.yml
+++ b/agent/.goreleaser_dryrun.yml
@@ -5,6 +5,8 @@ snapshot:
 
 builds:
   - main: ./cmd/determined-agent
+    id: determined-agent
+    binary: determined-agent
     goos:
       - linux
       - darwin
@@ -15,6 +17,7 @@ builds:
 archives:
   - wrap_in_directory: "true"
     rlcp: true
+    name_template: "determined_agent_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ with .Arm }}v{{ . }}{{ end }}{{ with .Mips }}_{{ . }}{{ end }}{{ if not (eq .Amd64 \"v1\") }}{{ .Amd64 }}{{ end }}"
     files:
       - src: "packaging/agent.yaml"
         dst: "etc/determined/"
