--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1516,7 +1516,6 @@ jobs:
           paths:
             - examples/build
             - harness/dist
-            - model_hub/dist
             - docs/build
             - docs/site
       - run: tar czf docs.tgz docs/site/html
@@ -1711,20 +1710,6 @@ jobs:
       - make-package
       - run: tools/scripts/retry.sh make -C master publish-dev
       - run: tools/scripts/retry.sh make -C agent publish-dev
-      - run:
-          name: Build and publish model_hub docker images
-          command: |
-            if [ ${CIRCLE_BRANCH} = 'main' ] || [[ ${CIRCLE_BRANCH} == *"release-"* ]]; then
-                # For main and release branches, we will tag and publish both the environment
-                # with the git hash as well as the version.  This will make that image available
-                # immediately for nightly tests.
-                make -C model_hub build-docker
-                tools/scripts/retry.sh make -C model_hub publish-docker
-            else
-                # Otherwise, only tag and publish the environment with the git hash.
-                make -C model_hub build-docker-dev
-                tools/scripts/retry.sh make -C model_hub publish-docker-dev
-            fi
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
       - store_artifacts:
           path: /tmp/pkgs
@@ -1755,20 +1740,6 @@ jobs:
       - make-package-ee
       - run: tools/scripts/retry.sh make -C master publish-dev-ee
       - run: tools/scripts/retry.sh make -C agent publish-dev-ee
-      - run:
-          name: Build and publish model_hub docker images
-          command: |
-            if [ ${CIRCLE_BRANCH} = 'main' ] || [[ ${CIRCLE_BRANCH} == *"release-"* ]]; then
-                # For main and release branches, we will tag and publish both the environment
-                # with the git hash as well as the version.  This will make that image available
-                # immediately for nightly tests.
-                make -C model_hub build-docker
-                tools/scripts/retry.sh make -C model_hub publish-docker
-            else
-                # Otherwise, only tag and publish the environment with the git hash.
-                make -C model_hub build-docker-dev
-                tools/scripts/retry.sh make -C model_hub publish-docker-dev
-            fi
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
 
   package-and-push-system-rc:
@@ -1795,8 +1766,6 @@ jobs:
       - make-package
       - run: make -C master publish
       - run: make -C agent publish
-      - run: make -C model_hub build-docker
-      - run: tools/scripts/retry.sh make -C model_hub publish-docker
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
       - store_artifacts:
           path: /tmp/pkgs
@@ -1851,8 +1820,6 @@ jobs:
       - run:
           no_output_timeout: 30m
           command: make -C agent release
-      - run: make -C model_hub build-docker
-      - run: make -C model_hub publish-docker
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
       - store_artifacts:
           path: /tmp/pkgs
@@ -2371,10 +2338,9 @@ jobs:
       - setup-python-venv:
           install-python: false
           determined: true
-          extra-requirements-file: "requirements.txt model_hub/tests/requirements.txt"
+          extra-requirements-file: "requirements.txt"
           executor: <<pipeline.parameters.docker-image>>
       - run: make -C harness check
-      - run: make -C model_hub check
       - run: make -C e2e_tests check
       - run: make -C tools check
       - run: make -C schemas check
@@ -2613,9 +2579,7 @@ jobs:
           at: .
       - run: coverage combine *-pycov
       - run: coverage report --include 'harness/determined/*' --skip-covered
-      - run: coverage report --include 'model_hub/model_hub/*' --skip-covered
       - run: coverage html --include 'harness/determined/*' --skip-covered -d cov-html/harness
-      - run: coverage html --include 'model_hub/model_hub/*' --skip-covered -d cov-html/model_hub
       - store_artifacts:
           path: cov-html
           destination: cov-html
@@ -5534,7 +5498,7 @@ workflows:
           name: publish-python-package-rc
           matrix:
             parameters:
-              path: ["harness", "model_hub"]
+              path: ["harness"]
           context: determined-production
           filters: *rc-filters
           requires:
@@ -5551,7 +5515,7 @@ workflows:
           name: publish-python-package-release
           matrix:
             parameters:
-              path: ["harness", "model_hub"]
+              path: ["harness"]
           context: determined-production
           filters: *release-filters
           requires:
