--- a/examples/features/torch_batch_process_embeddings/requirements.txt
+++ b/examples/features/torch_batch_process_embeddings/requirements.txt
@@ -2,5 +2,5 @@ accelerate>=0.12.0
 transformers>=4.28.1,<4.29.0
 tokenizers>=0.13.3
 datasets
-chromadb
+chromadb==0.5.3 # Should be able to use > 0.5.5 once one exists
 huggingface_hub<0.23.0
