--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -290,7 +290,7 @@ commands:
       - when:
           condition: <<parameters.tf2>>
           steps:
-            - run: docker pull determinedai/pytorch-ngc-dev:0736b6d
+            - run: docker pull determinedai/pytorch-ngc-dev:testbumpenvs
 
   login-docker:
     parameters:
@@ -2463,7 +2463,7 @@ jobs:
 
   test-unit-harness-gpu-tf:
     docker:
-      - image: determinedai/tensorflow-ngc-dev:0736b6d
+      - image: determinedai/tensorflow-ngc-dev:testbumpenvs
     resource_class: determined-ai/container-runner-gpu
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -2490,7 +2490,7 @@ jobs:
 
   test-unit-harness-pytorch2-gpu:
     docker:
-      - image: determinedai/pytorch-ngc-dev:0736b6d
+      - image: determinedai/pytorch-ngc-dev:testbumpenvs
     resource_class: determined-ai/container-runner-gpu
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -2517,7 +2517,7 @@ jobs:
 
   test-unit-harness-pytorch2-cpu:
     docker:
-      - image: determinedai/pytorch-ngc-dev:0736b6d
+      - image: determinedai/pytorch-ngc-dev:testbumpenvs
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
       - checkout
@@ -2543,7 +2543,7 @@ jobs:
 
   test-unit-harness-gpu-parallel:
     docker:
-      - image: determinedai/pytorch-ngc-dev:0736b6d
+      - image: determinedai/pytorch-ngc-dev:testbumpenvs
     resource_class: determined-ai/container-runner-multi-gpu
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -2570,7 +2570,7 @@ jobs:
 
   test-unit-harness-gpu-deepspeed:
     docker:
-      - image: determinedai/pytorch-ngc-dev:0736b6d
+      - image: determinedai/pytorch-ngc-dev:testbumpenvs
     resource_class: determined-ai/container-runner-gpu
     steps:
       - run: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -3661,7 +3661,7 @@ jobs:
         type: string
         default: "1"
       environment-image:
-        default: determinedai/pytorch-ngc-dev:0736b6d
+        default: determinedai/pytorch-ngc-dev:testbumpenvs
         type: string
       accel-node-taints:
         type: string
