--- a/examples/computer_vision/iris_tf_keras/iris_tf_keras_cancelable.yaml
+++ b/examples/computer_vision/iris_tf_keras/iris_tf_keras_cancelable.yaml
@@ -4,8 +4,8 @@ data:
   test_url: http://download.tensorflow.org/data/iris_test.csv
 environment:
   image:
-    cpu: determinedai/tensorflow-ngc-dev:0736b6d
-    gpu: determinedai/tensorflow-ngc-dev:0736b6d
+    cpu: determinedai/tensorflow-ngc-dev:testbumpenvs
+    gpu: determinedai/tensorflow-ngc-dev:testbumpenvs
 resources:
   slots_per_trial: 8
   resource_pool: defq_GPU_cancelable
