only need 2 libraries

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1520,9 +1520,8 @@ jobs:
           install-python: false
           determined: false
           model-hub: false
-          extra-requirements-file: "docs/requirements.txt"
           executor: <<pipeline.parameters.docker-image>>
-      - run: pip install python_on_whales
+      - run: pip install python_on_whales ruamel
       - run: python tools/scripts/update-docker-tags.py tools/scripts/bumpenvs.yaml
 
   build-docs:
