--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1521,7 +1521,7 @@ jobs:
           determined: false
           model-hub: false
           executor: <<pipeline.parameters.docker-image>>
-      - run: pip install python_on_whales ruamel
+      - run: pip install python_on_whales ruamel_yaml
       - run: python tools/scripts/update-docker-tags.py tools/scripts/bumpenvs.yaml
 
   build-docs:
