--- a/e2e_tests/pytest.ini
+++ b/e2e_tests/pytest.ini
@@ -37,6 +37,7 @@ markers =
     nightly: nightly tests
     det_deploy_local: test det deploy local
     managed_devcluster: cluster tests that require a pytest-side managed cluster
+    managed_devcluster_resource_pools: cluster tests that require a pytest-side managed cluster with multiple resource pools
     port_registry: tests for port registry and unique port offset
 
     distributed_quarantine: distributed training tests (quarantine)
