--- a/examples/tutorials/core_api_pytorch_mnist/adaptive.yaml
+++ b/examples/tutorials/core_api_pytorch_mnist/adaptive.yaml
@@ -29,6 +29,7 @@ searcher:
   metric: test_loss
   smaller_is_better: true
   max_trials: 500
+  # XXX: need a time unit?
   max_length:
     epochs: 20
 entrypoint: python3 model_def_adaptive.py
