build: INFENG-809: Update CircleCI tag logic and add release dryrun workflow (#9877)

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -1,4 +1,5 @@
 export VERSION:=$(shell ../version.sh)
+export VERSION_TAG:=$(shell ../version.sh -t)
 
 build/stamp: $(shell find charts -type f)
 	mkdir -p build
@@ -18,17 +19,27 @@ clean:
 	rm -rf build/
 
 .PHONY: release-gh
-release-gh: export GORELEASER_CURRENT_TAG := $(VERSION)
-release-gh: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+$$' | grep "$(VERSION)" -A1 | sed -n '2 p')
+release-gh: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)
+release-gh: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+$$' | grep "$(VERSION_TAG)" -A1 | sed -n '2 p')
 release-gh:
 	go install github.com/goreleaser/goreleaser@v1.14.1
 	git clean -df
 	goreleaser --rm-dist
 
+.PHONY: release-gh-dryrun
+release-gh-dryrun: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)
+release-gh-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+$$' | grep "$(VERSION_TAG)" -A1 | sed -n '2 p')
+release-gh-dryrun:
+	go install github.com/goreleaser/goreleaser@v1.14.1
+	git clean -df
+	goreleaser --rm-dist -f ./.goreleaser_dryrun.yml
+
 .PHONY: release-gh-ee
-release-gh-ee: export GORELEASER_CURRENT_TAG := $(VERSION)-ee
-release-gh-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+-ee$$' | grep "$(VERSION)-ee" -A1 | sed -n '2 p')
+release-gh-ee: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)-ee
+release-gh-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+-ee$$' | grep "$(VERSION_TAG)-ee" -A1 | sed -n '2 p')
 release-gh-ee:
 	go install github.com/goreleaser/goreleaser@v1.14.1
 	git clean -df
 	goreleaser --rm-dist
+
+release-gh-ee-dryrun: ;
