chore: parameterized postgres CI image across each CI devcluster config & bump postgres version to 14 by default

--- a/.circleci/devcluster/priority.devcluster.yaml
+++ b/.circleci/devcluster/priority.devcluster.yaml
@@ -6,6 +6,7 @@ stages:
       db_name: db-priority-scheduler
       container_name: determined_db-priority-scheduler
       port: 5434
+      image_name: $DET_POSTGRES_VERSION
 
   - elastic:
       name: elastic-priority-scheduler
