chore: bump current environment image versions to 0.37.0

--- a/.circleci/scripts/pull_image_daemonset.yaml
+++ b/.circleci/scripts/pull_image_daemonset.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: pull-docker-daemonset
-          image: determinedai/pytorch-ngc-dev:0736b6d
+          image: determinedai/pytorch-ngc:0.37.0
           command: ["/bin/bash"]
           args: ["echo", "test"]
           resources:
